# deskpet-code-with-Qt

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  generate_sprites.py  main.cpp  pet_state.h  petwindow.cpp  petwindow.h  sprite_loader.cpp  sprite_loader.h
